# fod

./: .gitignore  README.md  environment.yml  pyproject.toml
demo-assets/pixi-py/: pixi.toml  pyproject.toml
fod/: __main__.py
fod/_fod/: data_dir.py  utils.py
fod/_fod/models/: environment.py
fod/cli/: checkpoint.py  root.py
