[project]
authors = [{name = "sophia", email = "scastellarin@quansight.com"}]
description = "Add a short description here"
name = "pixi-py"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["flask>=3.1.0,<4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_py = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
black = ">=24.10.0,<25"
